--- a/config/LJSpeech/model.yaml
+++ b/config/LJSpeech/model.yaml
@@ -7,14 +7,14 @@ duration_modeling:
 
 prosody:
   # Du et al., 2021
-  learn_mixture: True # This is only supported under supervised duration modeling (learn_alignment: False)
+  learn_mixture: False # This is only supported under supervised duration modeling (learn_alignment: False)
   extractor_kernel_size: 9
   predictor_kernel_size: [9, 5]
   predictor_num_gaussians: 20
   predictor_dropout: 0.2
 
   # Liu et al., 2021
-  learn_implicit: False # This is only tested under supervised duration modeling (learn_alignment: False)
+  learn_implicit: True # This is only tested under supervised duration modeling (learn_alignment: False)
   bottleneck_size_u: 256
   bottleneck_size_p: 4
   ref_enc_filters: [32, 32, 64, 64, 128, 128]
@@ -24,7 +24,7 @@ prosody:
   ref_enc_gru_size: 32
   ref_attention_dropout: 0.
   token_num: 32
-  predictor_kernel_size: [9, 5] # [9, 5] for non-parallel predictor / 3 for parallel predictor
+  predictor_kernel_size: 3 # [9, 5] for non-parallel predictor / 3 for parallel predictor
   predictor_dropout: 0.5
 
 transformer:
