--- a/config/VCTK/model.yaml
+++ b/config/VCTK/model.yaml
@@ -1,4 +1,4 @@
-block_type: "transformer"
+block_type: "transformer" # ["transformer", "fastformer", "lstransformer", "conformer", "reformer"]
 external_speaker_dim: 512
 
 duration_modeling:
@@ -6,11 +6,30 @@ duration_modeling:
   aligner_temperature: 0.0005
 
 prosody:
-  learn_mixture: True # This is only supported under supervised duration modeling (learn_alignment: False)
-  extractor_kernel_size: 9
-  predictor_kernel_size: [9, 5]
-  predictor_num_gaussians: 20
-  predictor_dropout: 0.2
+  learn_type: "none" # ["du2021", "liu2021", "none"]
+
+  # Du et al., 2021
+  # This is only supported under supervised duration modeling (learn_alignment: False)
+  du2021:
+    extractor_kernel_size: 9
+    predictor_kernel_size: [9, 5]
+    predictor_num_gaussians: 20
+    predictor_dropout: 0.2
+
+  # Liu et al., 2021
+  # This is only tested under supervised duration modeling (learn_alignment: False)
+  liu2021:
+    bottleneck_size_u: 256
+    bottleneck_size_p: 4
+    ref_enc_filters: [32, 32, 64, 64, 128, 128]
+    ref_enc_size: [3, 3]
+    ref_enc_strides: [1, 2] # '1' is to keep the sequence length
+    ref_enc_pad: [1, 1]
+    ref_enc_gru_size: 32
+    ref_attention_dropout: 0.
+    token_num: 32
+    predictor_kernel_size: 3 # [9, 5] for non-parallel predictor / 3 for parallel predictor
+    predictor_dropout: 0.5
 
 transformer:
   encoder_layer: 4
