--- a/config/LJSpeech/preprocess.yaml
+++ b/config/LJSpeech/preprocess.yaml
@@ -3,7 +3,7 @@ dataset: "LJSpeech"
 path:
   corpus_path: "/home/keon/speech-datasets/en/LJSpeech-1.1"
   lexicon_path: "lexicon/librispeech-lexicon.txt"
-  raw_path: "./raw_data/LJSpeech"
+  raw_path: "/ssd2/implementations/raw_data/LJSpeech_22k" #"./raw_data/LJSpeech"
   preprocessed_path: "./preprocessed_data/LJSpeech"
 
 preprocessing:
@@ -27,8 +27,18 @@ preprocessing:
     feature: "phoneme_level" # support 'phoneme_level' or 'frame_level'
     normalization: True
   
+    pitch_type: "cwt" # support 'frame', 'ph', 'cwt'
+    pitch_norm: "log" # support 'standard', 'log'
+    pitch_norm_eps: 0.000000001
+    pitch_ar: False
     with_f0: True
     with_f0cwt: True
+    use_uv: True
+    f0_unsup_mean: -1 # need to be updated after running preprocessor
+    f0_unsup_std: -1 # need to be updated after running preprocessor
+    f0_sup_mean: -1 # need to be updated after running preprocessor
+    f0_sup_std: -1 # need to be updated after running preprocessor
+    cwt_scales: -1
   energy:
     feature: "phoneme_level" # support 'phoneme_level' or 'frame_level'
     normalization: True
