--- a/config/VCTK/preprocess.yaml
+++ b/config/VCTK/preprocess.yaml
@@ -6,7 +6,7 @@ path:
   wav_dir: "wav48_silence_trimmed"
   txt_dir: "txt"
   lexicon_path: "lexicon/librispeech-lexicon.txt"
-  raw_path: "/ssd2/implementations/raw_data/VCTK" #"./raw_data/VCTK"
+  raw_path: "./raw_data/VCTK"
   preprocessed_path: "./preprocessed_data/VCTK"
 
 preprocessing:
@@ -29,9 +29,6 @@ preprocessing:
     mel_fmin: 0
     mel_fmax: 8000 # please set to 8000 for HiFi-GAN vocoder, set to null for MelGAN vocoder
   pitch:
-    feature: "phoneme_level" # support 'phoneme_level' or 'frame_level'
-    normalization: True
-
     pitch_type: "cwt" # support 'frame', 'ph', 'cwt'
     pitch_norm: "log" # support 'standard', 'log'
     pitch_norm_eps: 0.000000001
@@ -39,10 +36,6 @@ preprocessing:
     with_f0: True
     with_f0cwt: True
     use_uv: True
-    f0_unsup_mean: 173.75402717802498 # need to be updated after running preprocessor
-    f0_unsup_std: 74.34219239259376 # need to be updated after running preprocessor
-    f0_sup_mean: 173.7440893829976 # need to be updated after running preprocessor
-    f0_sup_std: 73.06925429829342 # need to be updated after running preprocessor
     cwt_scales: -1
   energy:
     feature: "phoneme_level" # support 'phoneme_level' or 'frame_level'
