--- a/config/LJSpeech/model.yaml
+++ b/config/LJSpeech/model.yaml
@@ -1,7 +1,7 @@
 block_type: "transformer" # ["transformer", "fastformer", "lstransformer", "conformer", "reformer"]
 
 duration_modeling:
-  learn_alignment: False
+  learn_alignment: True
   aligner_temperature: 0.0005
 
 prosody:
@@ -63,18 +63,27 @@ reformer:
 
 variance_predictor:
   filter_size: 256
-  kernel_size: 3
+  predictor_grad: 0.1
+  predictor_layers: 2
+  predictor_kernel: 5
+  cwt_hidden_size: 128
+  cwt_std_scale: 0.8
+  dur_predictor_layers: 2
+  dur_predictor_kernel: 3
   dropout: 0.5
+  ffn_padding: "SAME"
+  ffn_act: "gelu"
 
 variance_embedding:
-  kernel_size: 9
-  pitch_quantization: "linear" # support 'linear' or 'log', 'log' is allowed only if the pitch values are not normalized during preprocessing
+  use_pitch_embed: True
+  pitch_n_bins: 300
+  use_energy_embed: True
+  energy_n_bins: 256
   energy_quantization: "linear" # support 'linear' or 'log', 'log' is allowed only if the energy values are not normalized during preprocessing
-  n_bins: 256
 
 multi_speaker: False
 
-max_seq_len: 1000
+max_seq_len: 1000 # max sequence length of LJSpeech is 870
 
 vocoder:
   model: "HiFi-GAN" # support 'HiFi-GAN', 'MelGAN'
